--- a/about.html
+++ b/about.html
@@ -15,10 +15,10 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>一万小时定律<br>
+    千里之行 始于足下</p></blockquote>
 
-    <p>Hey，我叫<strong>邹黎民</strong>，一只即将毕业的学生，对0和1的世界充满兴趣。</p>
+    <p>Hey，我叫<strong>MarkChan</strong>，计算机初学者、单词爱好者。</p>
 
     <p>学习之余，喜欢与人探讨技术</p>
 
